# UnitVectorEncoding

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  test.cpp
